2001-10-22  Joe Shaw  <joe@ximian.com>

	* src/soup-ssl-proxy/soup-ssl-proxy.c (soup_ssl_proxy_readwrite):
	Make sure we handle G_IO_IN before we handle G_IO_HUP so we don't
	lose data on the pipe, as you can receive both at the same time.
	Ian Peters actually found this, but I am his commit monkey.

2001-10-20  Alex Graveley  <alex@ximian.com>

	* configure.in: Bump version to 0.5.2.
	* src/libsoup/soup-private.h: Update version.

2001-10-18  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-queue.c (soup_queue_read_headers_cb): Set
	encoding out param appropriately.
	* src/soup-httpd/soup-httpd.c (soup_httpd_read_headers_cb): Ditto.

	* src/libsoup/soup-transfer.h: Add SoupTransferEncoding enum.

	* src/libsoup/soup-transfer.c (soup_transfer_read_error_cb):
	Handle unknown encoding by issuing the read_done callback when the
	connection is closed.
	(issue_chunk_callback): Pass in a cancelled arg to simplify code.
	(read_unknown): Impl. Same as read_content_length () except never
	return read_done.
	(soup_transfer_read_cb): Make headers_done_cb take an encoding out
	parameter to avod magic values in content_length. Switch on
	encoding to see if read completed. Use issue_final_callback.

2001-10-16  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-auth.c (compute_response): A NULL passwd is
	perfectly valid, so we want to avoid crashing if that is the case.

2001-10-04  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-socket-unix.c (soup_address_new_cb): Ugg. Don't
	call waitpid with NOHANG. Avoid zombies. Gain friends.

2001-09-17  Alex Graveley  <alex@ximian.com>

	* configure.in: Bump version to 0.5.1.

	* src/libsoup/soup-private.h: Change win version tag to 0.5.1.

	* Makefile.am: Install soup.m4.

2001-09-17  Vladimir Vukicevic  <vladimir@ximian.com>

	* src/libsoup/soup-socket.c, src/libsoup/soup-socket.h:
	Added soup_address_copy().  Changed soup_address_new to check
	whether the ports are the same before using a cached
	address.
