@@ -1,3 +1,9 @@
+2001-10-26  Alex Graveley  <alex@ximian.com>
+
+	* src/libsoup/soup-transfer.c (issue_chunk_callback): Address bug
+	where data buffer passed to chunk callback could be invalid due to
+	appending a null. Just don't addend NULL for chunk callbacks.
+
 2001-10-22  Joe Shaw  <joe@ximian.com>
 
 	* src/soup-ssl-proxy/soup-ssl-proxy.c (soup_ssl_proxy_readwrite):
